--- a/trunk/web/eng/projeler/turkce/y10me/y10me.html
+++ b/trunk/web/eng/projeler/turkce/y10me/y10me.html
@@ -42,189 +42,183 @@
 
 <br>
 
+
+
 <!-- SAYFA İÇERİK BAŞI -->
 <div class="belge">
 
 
-<H1 ALIGN=center>Açık Kaynak Kodlu Yazılımların Türkiye'deki Yerelleştirme Çalışmaları</H1>
+<H1 ALIGN=center>Localization Works of Open Source Softwares in Turkey</H1>
 
-<H3 ALIGN=center>Barış Metin (baris@uludag.org.tr), A. Murat Eren (meren@uludag.org.tr)</H3>
+<H3 ALIGN=center>Barış Metin (baris at uludag.org.tr), A. Murat Eren (meren at uludag.org.tr)</H3>
 <BLOCKQUOTE><B>Özet: </B>
-Belgede açık kaynak kodlu yazılımların ve belgelerin Türkiye'deki
-resmi yerelleştirme çalışmalarını listelenmektedir.<BR>
+Open source softwares and documents localization works in Turkey listed
+in this document.<BR>
 <BR>
 <!--TOC section İçindekiler-->
 
 <H2>İçindekiler</H2><!--SEC END -->
 
 <UL><LI>
-<A HREF="#htoc1">1&nbsp;&nbsp;Giriş</A>
-<LI><A HREF="#htoc2">2&nbsp;&nbsp;Resmi Yerelleştirme Grupları</A>
+<A HREF="#htoc1">1&nbsp;&nbsp;Introduction</A>
+<LI><A HREF="#htoc2">2&nbsp;&nbsp;Official Localization Groups</A>
 <UL><LI>
-<A HREF="#htoc3">2.1&nbsp;&nbsp;GNOME Türkiye</A>
+<A HREF="#htoc3">2.1&nbsp;&nbsp;GNOME Turkey</A>
 <LI><A HREF="#htoc4">2.2&nbsp;&nbsp;GNU-TR</A>
-<LI><A HREF="#htoc5">2.3&nbsp;&nbsp;KDE Türkiye</A>
-<LI><A HREF="#htoc6">2.4&nbsp;&nbsp;Mozilla Türkiye</A>
-<LI><A HREF="#htoc7">2.5&nbsp;&nbsp;Türkçe OpenOffice.org</A>
-<LI><A HREF="#htoc8">2.6&nbsp;&nbsp;PostgreSQL Türkçe</A>
+<LI><A HREF="#htoc5">2.3&nbsp;&nbsp;KDE Turkey</A>
+<LI><A HREF="#htoc6">2.4&nbsp;&nbsp;Mozilla Turkey</A>
+<LI><A HREF="#htoc7">2.5&nbsp;&nbsp;Turkish OpenOffice.org</A>
+<LI><A HREF="#htoc8">2.6&nbsp;&nbsp;PostgreSQL Turkish</A>
 </UL>
-<LI><A HREF="#htoc9">3&nbsp;&nbsp;Belgeleme çalışmaları</A>
+<LI><A HREF="#htoc9">3&nbsp;&nbsp;Documentation Groups</A>
 <UL><LI>
 <A HREF="#htoc10">3.1&nbsp;&nbsp;belgeler.org</A>
 </UL>
-<LI><A HREF="#htoc11">4&nbsp;&nbsp;Linux Dağıtımları Yerelleştirme Çalışmaları</A>
+<LI><A HREF="#htoc11">4&nbsp;&nbsp;GNU/Linux Distributions Localization Groups</A>
 <UL><LI>
-<A HREF="#htoc12">4.1&nbsp;&nbsp;Debian Linux</A>
-<LI><A HREF="#htoc13">4.2&nbsp;&nbsp;Fedora Linux</A>
-<LI><A HREF="#htoc14">4.3&nbsp;&nbsp;Mandrake Linux</A>
+<A HREF="#htoc12">4.1&nbsp;&nbsp;Debian GNU/Linux</A>
+<LI><A HREF="#htoc13">4.2&nbsp;&nbsp;Fedora GNU/Linux</A>
+<LI><A HREF="#htoc14">4.3&nbsp;&nbsp;Mandrake GNU/Linux</A>
 </UL>
 </UL>
 </BLOCKQUOTE>
-<!--TOC section Giriş-->
+<!--TOC section Introduction-->
 
-<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Giriş</H2><!--SEC END -->
+<H2><A NAME="htoc1">1</A>&nbsp;&nbsp;Introduction</H2><!--SEC END -->
 
-Yerelleştirme çalışmaları çoğunlukla çeviri çalışmaları olarak da
-adlandırılırlar. Listede bulunmayan yerelleştirme çalışmalarından
-bizi haberdar etmek için uludag@uludag.org.tr adresine e-posta gönderebilirsiniz.<BR>
+You can help Uludag Project with help listed localization groups.
+Because of our primarily software decisions, if you want make your
+localization works useful directly for this project you can contact
+us from our mailing lists<SUP><A NAME="text1" HREF="#note1">1</A></SUP>. Furthermore you can contact us for changed or missing localization
+projects and any any change you want on this document. Also you may
+want to reach these listed groups to ask them to translate an open
+source software, a project documentation or even a project web site
+into Turkish.<BR>
 <BR>
-Listelenen yerelleştirme gruplarına yardım ederek Uludağ Projesi'nin
-yerelleştirme çalışmalarının yükünü hafifletmiş olursunuz. Öncelikli
-yazılım tercihlerimizden dolayı yaptığınız yerelleştirme çalışmalarının
-doğrudan projeye katkı olarak yansıması için e-posta listelerimiz<SUP><A NAME="text1" HREF="#note1">1</A></SUP> aracılığı ile bizimle iletişime geçebilirsiniz. Ayrıca eksik veya
-değişmiş olan yerelleştirme grubu bağlantıları ya da eklenmesini istediğiniz
-yerelleştirme çalışmaları ile ilgili olarak belge yazarlarına e-posta
-yolu ile ulaşabilirsiniz.<BR>
+Listing of localization groups is categorized and in alphabetical
+order.<BR>
 <BR>
-Yerelleştirme çalışmaları kategoriler halinde, alfabetik bir sıra
-ile listelenmiştir.<BR>
+<!--TOC section Official Localization Groups-->
+
+<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Official Localization Groups</H2><!--SEC END -->
+
+<!--TOC subsection GNOME Turkey-->
+
+<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;GNOME Turkey</H3><!--SEC END -->
+<IMG SRC="logo/gnomelogo.png"><BR>
 <BR>
-<!--TOC section Resmi Yerelleştirme Grupları-->
-
-<H2><A NAME="htoc2">2</A>&nbsp;&nbsp;Resmi Yerelleştirme Grupları</H2><!--SEC END -->
-
-<!--TOC subsection GNOME Türkiye-->
-
-<H3><A NAME="htoc3">2.1</A>&nbsp;&nbsp;GNOME Türkiye</H3><!--SEC END -->
-
-<IMG SRC="y10me001.gif"><BR>
-<BR>
-GNOME masaüstü ortamının yerelleştirme çalışmalarını yürütmenin yanı
-sıra GNOME masaüstü ortamını tanıtmayı ve geliştirilmesine katkıda
-bulunmayı amaçlıyorlar.
+They work on GNOME's localization and promotion. They help developing
+of software.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="www.gnome.org.tr"><TT>www.gnome.org.tr</TT></A>
-<DT><B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://l10n-status.gnome.org/"><TT>http://l10n-status.gnome.org/</TT></A>
-<DT><B>E-posta&nbsp;Listesi&nbsp;:</B><DD><A HREF="http://mail.gnome.org/mailman/listinfo/gnome-turk"><TT>http://mail.gnome.org/mailman/listinfo/gnome-turk</TT></A>
+<B>Website:</B><DD><A HREF="http://www.gnome.org.tr"><TT>http://www.gnome.org.tr</TT></A>
+<DT><B>Status&nbsp;Page:</B><DD><A HREF="http://l10n-status.gnome.org/"><TT>http://l10n-status.gnome.org/</TT></A>
+<DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://mail.gnome.org/mailman/listinfo/gnome-turk"><TT>http://mail.gnome.org/mailman/listinfo/gnome-turk</TT></A>
 </DL>
 <!--TOC subsection GNU-TR-->
 
 <H3><A NAME="htoc4">2.2</A>&nbsp;&nbsp;GNU-TR</H3><!--SEC END -->
 
-<IMG SRC="y10me002.gif"><BR>
+<IMG SRC="logo/gnulogo.jpg"><BR>
 <BR>
-Linux'ta bulunan GNU yazılımlarına Türkçe desteği veriyorlar.
+They prepare Turkish support for GNU softwares that works on Linux.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://gnu-tr.sourceforge.net"><TT>http://gnu-tr.sourceforge.net</TT></A>
-<DT><B>E-posta&nbsp;Listesi:</B><DD><A HREF="http://lists.sourceforge.net/lists/listinfo/gnu-tr-u12a"><TT>http://lists.sourceforge.net/lists/listinfo/gnu-tr-u12a</TT></A>
+<B>Website:</B><DD><A HREF="http://gnu-tr.sourceforge.net"><TT>http://gnu-tr.sourceforge.net</TT></A>
+<DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://lists.sourceforge.net/lists/listinfo/gnu-tr-u12a"><TT>http://lists.sourceforge.net/lists/listinfo/gnu-tr-u12a</TT></A>
 </DL>
-<!--TOC subsection KDE Türkiye-->
+<!--TOC subsection KDE Turkey-->
 
-<H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;KDE Türkiye</H3><!--SEC END -->
+<H3><A NAME="htoc5">2.3</A>&nbsp;&nbsp;KDE Turkey</H3><!--SEC END -->
 
-<IMG SRC="y10me003.gif"><BR>
+<IMG SRC="logo/kdelogo.jpg"><BR>
 <BR>
-KDE masaüstü ortamının yerelleştirme çalışmalarını yürütüyor ve tanıtımını
-yapıyorlar.
+They work on KDE's localization and promotion.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://www.kde.org.tr"><TT>http://www.kde.org.tr</TT></A>
-<DT><B>E-Posta&nbsp;Listesi:</B><DD><A HREF="http://www.kde.org.tr/mailman/listinfo/yerellestirme"><TT>http://www.kde.org.tr/mailman/listinfo/yerellestirme</TT></A>
+<B>Website:</B><DD><A HREF="http://www.kde.org.tr"><TT>http://www.kde.org.tr</TT></A>
+<DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://www.kde.org.tr/mailman/listinfo/yerellestirme"><TT>http://www.kde.org.tr/mailman/listinfo/yerellestirme</TT></A>
 </DL>
-<!--TOC subsection Mozilla Türkiye-->
+<!--TOC subsection Mozilla Turkey-->
 
-<H3><A NAME="htoc6">2.4</A>&nbsp;&nbsp;Mozilla Türkiye</H3><!--SEC END -->
+<H3><A NAME="htoc6">2.4</A>&nbsp;&nbsp;Mozilla Turkey</H3><!--SEC END -->
 
-Mozilla projesi tarafından geliştirilen internet araçlarına Türkçe
-desteği veriyorlar.
+They work on localization of web tools that developed by Mozilla Foundation.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://www.mozilla.org.tr"><TT>http://www.mozilla.org.tr</TT></A>
-<DT><B>E-Posta&nbsp;Listesi:</B><DD><A HREF="http://lists.mozilla.org.tr/mailman/listinfo/mozilla"><TT>http://lists.mozilla.org.tr/mailman/listinfo/mozilla</TT></A>
+<B>Website:</B><DD><A HREF="http://www.mozilla.org.tr"><TT>http://www.mozilla.org.tr</TT></A>
+<DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://lists.mozilla.org.tr/mailman/listinfo/mozilla"><TT>http://lists.mozilla.org.tr/mailman/listinfo/mozilla</TT></A>
 </DL>
-<!--TOC subsection Türkçe OpenOffice.org-->
+<!--TOC subsection Turkish OpenOffice.org-->
 
-<H3><A NAME="htoc7">2.5</A>&nbsp;&nbsp;Türkçe OpenOffice.org</H3><!--SEC END -->
+<H3><A NAME="htoc7">2.5</A>&nbsp;&nbsp;Turkish OpenOffice.org</H3><!--SEC END -->
 
-OpenOffice ofis yazılımlarının yerelleştirme, tanıtım çalışmalarını
-yürütürken; yazılımın bütün bir Türkçe ile kullanılabilmesi yazılımın
-geliştirilmesine destek oluyorlar.
+They work on OpenOffice.org's localization and promotion. They help
+developing of software to make it 100% Turkish compatible.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="http://tr.openoffice.org"><TT>http://tr.openoffice.org</TT></A>
-<DT><B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://ootrans.iqchoice.com/"><TT>http://ootrans.iqchoice.com/</TT></A>
-<DT><B>Çeviri&nbsp;E-Posta&nbsp;Listesi:</B><DD><A HREF="http://tr.openoffice.org/servlets/ProjectMailingListList"><TT>http://tr.openoffice.org/servlets/ProjectMailingListList</TT></A>
+<B>Website:</B><DD><A HREF="http://tr.openoffice.org"><TT>http://tr.openoffice.org</TT></A>
+<DT><B>Status&nbsp;Page:</B><DD><A HREF="http://ootrans.iqchoice.com/"><TT>http://ootrans.iqchoice.com/</TT></A>
+<DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://tr.openoffice.org/servlets/ProjectMailingListList"><TT>http://tr.openoffice.org/servlets/ProjectMailingListList</TT></A>
 </DL>
-<!--TOC subsection PostgreSQL Türkçe-->
+<!--TOC subsection PostgreSQL Turkish-->
 
-<H3><A NAME="htoc8">2.6</A>&nbsp;&nbsp;PostgreSQL Türkçe</H3><!--SEC END -->
+<H3><A NAME="htoc8">2.6</A>&nbsp;&nbsp;PostgreSQL Turkish</H3><!--SEC END -->
 
-<IMG SRC="y10me004.gif"><BR>
+<IMG SRC="logo/postgresql.png"><BR>
 <BR>
-PostgreSQL veritabanı sunucucu ve yardımcı araçlarına Türkçe desteği
-eklemenin yanı sıra yazılım için Türkçe belgeler hazırlıyorlar.
+They prepare Turkish documents and Turkish support for PostgreSQL
+database server and additional tools.
 <DL COMPACT=compact><DT>
-<B>Proje&nbsp;Sayfası:</B><DD><A HREF="http://sourceforge.net/projects/pgsqlturkce"><TT>http://sourceforge.net/projects/pgsqlturkce</TT></A>
-<DT><B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://developer.postgresql.org/~petere/nlsstatus/#tcurrent"><TT>http://developer.postgresql.org/~petere/nlsstatus/#tcurrent</TT></A>
+<B>Website:</B><DD><A HREF="http://sourceforge.net/projects/pgsqlturkce"><TT>http://sourceforge.net/projects/pgsqlturkce</TT></A>
+<DT><B>Status&nbsp;Page:</B><DD><A HREF="http://developer.postgresql.org/~petere/nlsstatus/#tcurrent"><TT>http://developer.postgresql.org/~petere/nlsstatus/#tcurrent</TT></A>
 </DL>
-<!--TOC section Belgeleme çalışmaları-->
+<!--TOC section Documentation Groups-->
 
-<H2><A NAME="htoc9">3</A>&nbsp;&nbsp;Belgeleme çalışmaları</H2><!--SEC END -->
+<H2><A NAME="htoc9">3</A>&nbsp;&nbsp;Documentation Groups</H2><!--SEC END -->
 
 <!--TOC subsection belgeler.org-->
 
 <H3><A NAME="htoc10">3.1</A>&nbsp;&nbsp;belgeler.org</H3><!--SEC END -->
 
-<IMG SRC="y10me005.gif"><BR>
+<IMG SRC="logo/belgelerlogo.png"><BR>
 <BR>
-Özgür lisansa sahip pek çok belgenin Türkçe çevirilerinin yanı sıra
-özgün belgeler ile zengin bir belge arşivi oluşturuyorlar.
+They create a rich document archive includes original documents and
+Turkish translation of many documents that published under one of
+open source licenses.
 <DL COMPACT=compact><DT>
-<B>Web&nbsp;Sayfaları:</B><DD><A HREF="www.belgeler.org"><TT>www.belgeler.org</TT></A>
+<B>Website:</B><DD><A HREF="http://www.belgeler.org"><TT>http://www.belgeler.org</TT></A>
 </DL>
-<!--TOC section Linux Dağıtımları Yerelleştirme Çalışmaları-->
+<!--TOC section GNU/Linux Distributions Localization Groups-->
 
-<H2><A NAME="htoc11">4</A>&nbsp;&nbsp;Linux Dağıtımları Yerelleştirme Çalışmaları</H2><!--SEC END -->
+<H2><A NAME="htoc11">4</A>&nbsp;&nbsp;GNU/Linux Distributions Localization Groups</H2><!--SEC END -->
 
-<!--TOC subsection Debian Linux-->
+<!--TOC subsection Debian GNU/Linux-->
 
-<H3><A NAME="htoc12">4.1</A>&nbsp;&nbsp;Debian Linux</H3><!--SEC END -->
+<H3><A NAME="htoc12">4.1</A>&nbsp;&nbsp;Debian GNU/Linux</H3><!--SEC END -->
 
-<IMG SRC="y10me006.gif"><BR>
+<IMG SRC="logo/debianlogo.png"><BR>
 <BR>
-Debian GNU/Linux yerelleştirme çalışmalarını yürütüyorlar.
+They work on localization of Debian GNU/Linux.
 <DL COMPACT=compact><DT>
-<B>E-posta&nbsp;Listesi:</B><DD><A HREF="http://lists.debian.org/debian-l10n-turkish/"><TT>http://lists.debian.org/debian-l10n-turkish/</TT></A>
+<B>E-mail&nbsp;List:</B><DD><A HREF="http://lists.debian.org/debian-l10n-turkish/"><TT>http://lists.debian.org/debian-l10n-turkish/</TT></A>
 </DL>
-<!--TOC subsection Fedora Linux-->
+<!--TOC subsection Fedora GNU/Linux-->
 
-<H3><A NAME="htoc13">4.2</A>&nbsp;&nbsp;Fedora Linux</H3><!--SEC END -->
+<H3><A NAME="htoc13">4.2</A>&nbsp;&nbsp;Fedora GNU/Linux</H3><!--SEC END -->
 
-<IMG SRC="y10me007.gif"><BR>
+<IMG SRC="logo/fedoralogo.png"><BR>
 <BR>
-Fedora Linux yerelleştirme çalışmalarını yürütüyorlar.
+They work on localization of Fedora GNU/Linux.
 <DL COMPACT=compact><DT>
-<B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://i18n.redhat.com/cgi-bin/i18n-status"><TT>http://i18n.redhat.com/cgi-bin/i18n-status</TT></A>
-<DT><B>E-Posta&nbsp;Listesi:</B><DD><A HREF="http://listman.redhat.com/mailman/listinfo/fedora-trans-tr"><TT>http://listman.redhat.com/mailman/listinfo/fedora-trans-tr</TT></A>
+<B>Status&nbsp;Page:</B><DD><A HREF="http://i18n.redhat.com/cgi-bin/i18n-status"><TT>http://i18n.redhat.com/cgi-bin/i18n-status</TT></A>
+<DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://listman.redhat.com/mailman/listinfo/fedora-trans-tr"><TT>http://listman.redhat.com/mailman/listinfo/fedora-trans-tr</TT></A>
 </DL>
-<!--TOC subsection Mandrake Linux-->
+<!--TOC subsection Mandrake GNU/Linux-->
 
-<H3><A NAME="htoc14">4.3</A>&nbsp;&nbsp;Mandrake Linux</H3><!--SEC END -->
+<H3><A NAME="htoc14">4.3</A>&nbsp;&nbsp;Mandrake GNU/Linux</H3><!--SEC END -->
 
-<IMG SRC="y10me008.gif"><BR>
+<IMG SRC="logo/mandrake.png"><BR>
 <BR>
-Mandrake Linux yerelleştirme çalışmalarını yürütüyorlar.
+They work on localization of Mandrake GNU/Linux.
 <DL COMPACT=compact><DT>
-<B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://www.mandrakelinux.com/l10n/tr.php3"><TT>http://www.mandrakelinux.com/l10n/tr.php3</TT></A>
-<DT><B>İletişim&nbsp;Adresi:</B><DD>omerusta@gmail.com
-</DL>
+<B>Status&nbsp;Page:</B><DD><A HREF="http://www.mandrakelinux.com/l10n/tr.php3"><TT>http://www.mandrakelinux.com/l10n/tr.php3</TT></A>
+<DT><B>Contact&nbsp;Address:</B><DD>omerusta at gmail.com</DL>
 <!--BEGIN NOTES document-->
 <HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="#text1"><FONT SIZE=5>1</FONT></A><DD><A HREF="http://liste.uludag.org.tr/"><TT>http://liste.uludag.org.tr/</TT></A>
 </DL>
