--- a/web/eng/projeler/turkce/y10me/node_10.html
+++ b/web/eng/projeler/turkce/y10me/node_10.html
@@ -29,7 +29,7 @@ They work on localization of Debian GNU/Linux.
 <BR>
 They work on localization of Fedora GNU/Linux.
 <DL COMPACT=compact><DT>
-<B>Status&nbsp;Page:</B><DD><A HREF="http://i18n.redhat.com/cgi-bin/i18n-status"><TT>http://i18n.redhat.com/cgi-bin/i18n-status</TT></A>
+<B>Status&nbsp;Page:</B><DD><A HREF="http://i18n.redhat.com/i18n-status"><TT>http://i18n.redhat.com/i18n-status</TT></A>
 <DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://listman.redhat.com/mailman/listinfo/fedora-trans-tr"><TT>http://listman.redhat.com/mailman/listinfo/fedora-trans-tr</TT></A>
 </DL>
 
