--- a/web/projeler/turkce/y10me/y10me.html
+++ b/web/projeler/turkce/y10me/y10me.html
@@ -212,7 +212,7 @@ Debian GNU/Linux yerelleştirme çalışmalarını yürütüyorlar.
 <BR>
 Fedora Linux yerelleştirme çalışmalarını yürütüyorlar.
 <DL COMPACT=compact><DT>
-<B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://i18n.redhat.com/cgi-bin/i18n-status"><TT>http://i18n.redhat.com/cgi-bin/i18n-status</TT></A>
+<B>Durum&nbsp;Sayfası:</B><DD><A HREF="http://i18n.redhat.com/i18n-status"><TT>http://i18n.redhat.com/i18n-status</TT></A>
 <DT><B>E-Posta&nbsp;Listesi:</B><DD><A HREF="http://listman.redhat.com/mailman/listinfo/fedora-trans-tr"><TT>http://listman.redhat.com/mailman/listinfo/fedora-trans-tr</TT></A>
 </DL>
 <!--TOC subsection Mandrake Linux-->
