http://liste.uludag.org.tr/cgi-bin/mailman/ --> http://liste.uludag.org.tr/mailman/

--- a/trunk/web/eng/belgeler/gelistirici/gelistirici.html
+++ b/trunk/web/eng/belgeler/gelistirici/gelistirici.html
@@ -185,7 +185,7 @@ haberdar olmamız gerekiyor.<BR>
 Yazılım geliştirme konusundaki bilginizi ve emeğinizi bu alanda çalışan
 kaynak temizleme ve yenilikçi teknolojiler ekiplerine yardımcı olarak
 aktarabilirsiniz. Onlara nasıl yardımcı olabileceğinizi en iyi kendileri
-söyleyeceklerdir. <A HREF="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo"><TT>http://liste.uludag.org.tr/cgi-bin/mailman/listinfo</TT></A>
+söyleyeceklerdir. <A HREF="http://liste.uludag.org.tr/mailman/listinfo"><TT>http://liste.uludag.org.tr/mailman/listinfo</TT></A>
 adresi yardımı ile üye olabileceğiniz Uludağ e-posta listeleri size
 bu konuda yardımcı olacaktır.<BR>
 <BR>
@@ -1084,7 +1084,7 @@ Guide. http://fedora.redhat.com/participate/developers-guide/
 <DT><A NAME="key-10"><FONT COLOR=purple>[7]</FONT></A><DD>KDE (2004). KDE CVS Commit Policy. http://developer.kde.org/policies/commitpolicy.html
 </DL>
 <!--BEGIN NOTES document-->
-<HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="#text1"><FONT SIZE=5>1</FONT></A><DD>Kalite e-posta listesine http://liste.uludag.org.tr/cgi-bin/mailman/listinfo/kalite
+<HR WIDTH="50%" SIZE=1><DL><DT><A NAME="note1" HREF="#text1"><FONT SIZE=5>1</FONT></A><DD>Kalite e-posta listesine http://liste.uludag.org.tr/mailman/listinfo/kalite
 adresinden ulaşılabilir.
 <DT><A NAME="note2" HREF="#text2"><FONT SIZE=5>2</FONT></A><DD>'xy' crypt() fonksiyonuna, gölgelemede kullanılmak üzere parametre
 olarak verilecek olan rastgele iki karakterdir.
