--- a/web/belgeler/gelistirici/node_4.html
+++ b/web/belgeler/gelistirici/node_4.html
@@ -60,7 +60,7 @@ dahil olmak için bilmesi ve yapması gerekenleri tarif etmektedir.<BR>
 Yazılım geliştirme konusundaki bilginizi ve emeğinizi bu alanda çalışan
 kaynak temizleme ve yenilikçi teknolojiler ekiplerine yardımcı olarak
 aktarabilirsiniz. Onlara nasıl yardımcı olabileceğinizi en iyi kendileri
-söyleyeceklerdir. <A HREF="http://liste.uludag.org.tr/cgi-bin/mailman/listinfo"><TT>http://liste.uludag.org.tr/cgi-bin/mailman/listinfo</TT></A>
+söyleyeceklerdir. <A HREF="http://liste.uludag.org.tr/mailman/listinfo"><TT>http://liste.uludag.org.tr/mailman/listinfo</TT></A>
 adresi yardımı ile üye olabileceğiniz Uludağ e-posta listeleri size
 bu konuda yardımcı olacaktır.<BR>
 <BR>
