--- a/web/projeler/index.html
+++ b/web/projeler/index.html
@@ -102,6 +102,11 @@ bularak, kullanıcının, adını ve detaylarını bilmeden istediği
 işi yapan uygulamaları kurup çalıştırmasını sağlayabilir.
 </p>
 
+<p>
+Projenin çalışma sayfasına ulaşmak için <a href="pisi/index.html">tıklayınız</a>.
+</p>
+
+
 <p class="baslik"><img src="../images/bullet-krm.png"> YALI</p>
 <p>
 <em>YALI (Yet Another Linux Installer)</em>,
