--- a/web/index.html
+++ b/web/index.html
@@ -101,6 +101,12 @@ karar 30 Ocak 2005'te yayınlanan Uludağ Haftalık Bülteni'nde açıklanmışt
 <td valign="top" class="metin">
 <br>
 <img src="./images/bullet5.png" alt="nokta" width="11" height="11">
+
+<strong> 12 Temmuz 2005</strong>
+// Pardus'un kurulan versiyonu ile beraber gelecek olan, Uludağ Projesinin yeni nesil paket yöneticisi PİSİ'nin
+ilk dökümanı <a href="http://www.uludag.org.tr/projeler/pisi/">yayınlandı</a>!<br>
+
+<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
 <strong> 05 Mayıs 2005</strong>
 // Pardus kök dosya sisteminin 0.0.6 numaralı versiyonu <a href="ftp://ftp.uludag.org.tr/pub/pardus/rootfs/0.0.6/">yayınlandı</a>.
 Kurulum için yardımcı olması ümidi ile hazırlanmış bir belge de <a href="http://cekirdek.uludag.org.tr/~meren/root_fs_kurulum/">bu</a> adreste.<br>
@@ -110,10 +116,6 @@ Kurulum için yardımcı olması ümidi ile hazırlanmış bir belge de <a href=
 <strong> 16 Mart 2005</strong>
 // Web sayfalarımız gelen istekler ve sorular doğrultusunda yeniden düzenlendi.<br>
 
-<img src="./images/bullet5.png" alt="nokta" width="11" height="11">
-<strong> 07 Aralık 2004</strong>
-// Uludağ Haftalık Bülteni arşivi yayınlanmaya başlandı. Bültene rss bağlantısı
-ile de ulaşabilirsiniz (<a href="http://www.uludag.org.tr/bulten/bulten.xml">rss feed</a>).<br>
 </td>
 
 <td valign="top" class="metin">
