typo, Mehmet Uluer uyardi (bilerek biraktik, belgeyi okuyor musunuz diye test ediyoruz :))

--- a/trunk/web/projeler/pisi/pisi/pisi.html
+++ b/trunk/web/projeler/pisi/pisi/pisi.html
@@ -48,7 +48,7 @@
 
 
 <H1 ALIGN=center>PISI<BR>
-(Packages Installed Succesfully as Intented)</H1>
+(Packages Installed Successfully as Intended)</H1>
 
 <H3 ALIGN=center>S. Çağlar Onur, Onur Küçük, Barış Metin, A. Murat Eren, Eray Özkural,
 Gürer Özen</H3>
