--- a/web/projeler/pisi/pisi/node_27.html
+++ b/web/projeler/pisi/pisi/node_27.html
@@ -56,12 +56,12 @@ Gürer Özen</H3>
 
 <H3 ALIGN=center>(Pre-Alpha)</H3>
 <H4><A NAME="htoc25">4.9.3</A>&nbsp;&nbsp;Paket Kaldırmak</H4>
-Bir istemcinin sisteme paket kaldırmak için izleyeceği yol şöyledir;
+Bir istemcinin, sistemdeki bir paketi kaldırmak için izleyeceği yol şöyledir;
 <UL><LI>
 Sistemdeki ilgili uygulamalardan biri <B>PİSİ</B>'ye paket kaldırmak
 için istekte bulunur.
 <LI><B>PİSİ</B>, kendi yapılandırma dosyasını işleyerek, <B>Kurulu
-Paket Veritabanı</B>ndan paketin başka bir paket tarafından gereksinim
+Paket Veritabanı</B>ndan pakete başka bir paket tarafından gereksinim
 duyulup duyulmadığını kontrol eder.
 <LI><B>PİSİ</B> paketi kaldırır. 
 <LI><B>ÇOMAR</B>'a ilgili <B>CSL</B> betiklerini kaldırması için silinen
