--- a/web/basin/index.html
+++ b/web/basin/index.html
@@ -50,10 +50,18 @@
 <td width="10" valign="top">&nbsp;</td>
                <td width="661" valign="top" class="metin"><p><span class="baslik"><font face="Verdana, Arial, Helvetica, sans-serif">Basında Uludağ Projesi ve Pardus...</font></span><br>
                         <br><br>
-			
+
+						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="http://www.tubitak.gov.tr/basinci/dosya/4654.jpg">Sabah Gazetesi</a>, 03.07.2005</span>
+						<br><i>"MEB açık kaynağa hız veriyor"</i>
+						<br><br>
+
+						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="http://www.tubitak.gov.tr/basinci/dosya/4666.jpg">Cumhuriyet Gazetesi</a>, 04.07.2005</span>
+						<br><i>"TÜBİTAK, Teslim Ol"</i>
+						<br><br>
+
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.05.26/birgun.jpg">Birgün Gazetesi</a>, 26.05.2005</span>
 						<br><i>"Ankara'da Penguen Şenliği"</i>
-						<br><br>   
+						<br><br>
 
 						<span class="baslik"><img src="../images/bullet-krm.png"> <a href="./2005.04.13/aktuel.htm">Yeni Aktüel Dergisi</a>, 13.04.2005</span>
 						<br><i>"Hackerlar cepheye PC'ler miğfer klavyeler süngü"</i>
