--- a/web/eng/gelistiriciler.html
+++ b/web/eng/gelistiriciler.html
@@ -3,7 +3,7 @@
 <head>
 	<title>:: ulusal dağıtım projesi :: tübitak-uekae ::</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<link href="stil.css" rel="stylesheet" type="text/css">
+	<link href="../stil.css" rel="stylesheet" type="text/css">
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 	<link rel="alternate" title="Uludağ Bülteni" href="http://www.uludag.org.tr/bulten/bulten.xml" type="application/rss+xml">
 </head>
@@ -45,7 +45,7 @@
 
 <!-- SAYFA İÇERİK BAŞI -->
 
-<p><span class="baslik"> - Pardus Geliştiricileri</span>
+<p><span class="baslik"> - Pardus Developers</span>
 <br>
 
 <table border="0" cellspacing="10">
