--- a/web/hakkimizda.html
+++ b/web/hakkimizda.html
@@ -238,17 +238,24 @@ geçildi.
                           E-Posta: <a href="mailto:gurer [ at ] uludag.org.tr">gurer [ at ] uludag.org.tr</a><br>
                           Jabber: gurer [ at ] jabber.uludag.org.tr <br>
                           <br>
-                        
-			<img src="./images/ekip.jpg" width="280" height="219">                          <br>
-                          </span></p>
+                          </span><span class="isimler">İsmail Dönmez</span><span class="metin"><br>
+                          E-Posta: <a href="mailto:ismail [ at ] uludag.org.tr">ismail [ at ] uludag.org.tr</a><br>
+                          Web: <a href="http://cekirdek.uludag.org.tr/%7Eismail/" target="_blank">http://cekirdek.uludag.org.tr/~ismail/</a><br>
+                          Jabber: ismail [ at ] jabber.uludag.org.tr <br>
+                          <br>
+                          </span><span class="isimler">Görkem Çetin</span><span class="metin"><br>
+                          E-Posta: <a href="mailto:gorkem [ at ] uludag.org.tr">gorkem [ at ] uludag.org.tr</a><br>
+                          Web: <a href="http://cekirdek.uludag.org.tr/%7Egorkem/" target="_blank">http://cekirdek.uludag.org.tr/~gorkem/</a><br>
+                          Jabber: gorkem [ at ] jabber.uludag.org.tr <br>
+                          <br>
+                          </span>
                       </td>
-                    </tr>
+                     </tr>
                   </table>
-                  <p><span class="baslik"><br>
-                </span></p></td>
+                </td>
               </tr>
             </table>            
-
+<center><a href="gelistiriciler.html">Pardus Geliştiricileri</a></center>
 <!-- SAYFA İÇERİK SONU -->
 
 <!-- yayın hakkı -->
