--- a/trunk/web/eng/hakkimizda.html
+++ b/trunk/web/eng/hakkimizda.html
@@ -139,15 +139,25 @@
                           E-mail: <a href="mailto:gurer [ at ] uludag.org.tr">gurer [ at ] uludag.org.tr</a><br>
                           Jabber: gurer [ at ] jabber.uludag.org.tr <br>
                           <br>
-                          <img src="./images/ekip.jpg" width="280" height="219">                          <br>
-                          </span></p>
-                      </td>
-                    </tr>
+                          </span><span class="isimler">İsmail Dönmez</span><span class="metin"><br>
+                          E-mail: <a href="mailto:ismail [ at ] uludag.org.tr">ismail [ at ] uludag.org.tr</a><br>
+                          Web: <a href="http://cekirdek.uludag.org.tr/%7Eismail/" target="_blank">http://cekirdek.uludag.org.tr/~ismail/</a><br>
+                          Jabber: ismail [ at ] jabber.uludag.org.tr <br>
+                          <br>
+                          </span><span class="isimler">Görkem Çetin</span><span class="metin"><br>
+                          E-mail: <a href="mailto:gorkem [ at ] uludag.org.tr">gorkem [ at ] uludag.org.tr</a><br>
+                          Web: <a href="http://cekirdek.uludag.org.tr/%7Egorkem/" target="_blank">http://cekirdek.uludag.org.tr/~gorkem/</a><br>
+                          Jabber: gorkem [ at ] jabber.uludag.org.tr <br>
+                          <br>
+                          </span>
+                        </td>
+                      </tr>
                       </table> 
-                      <p><span class="baslik"><br> 
-                        </span></p></td> 
+                    </td> 
                   </tr> 
-                </table> 
+                </table>
+
+<center><a href="gelistiriciler.html">Pardus Developers</a></center>
                 <!-- SAYFA İÇERİK SONU --> 
                 <!-- yayın hakkı --> 
                 <br> 
