--- a/trunk/web/index.html
+++ b/trunk/web/index.html
@@ -55,18 +55,18 @@
 Pardus Ulusal İşletim Sistemi Çalışan CD</span><br>
 <br>
 
-<span class="metin">Gaziantep Üniversitesi'nde düzenlenen
-<a href="http://ab2005.gantep.edu.tr/index.php">Akademik Bilişim 2005</a>
-konferansında duyurulan ve katılımcılara dağıtılan Pardus Çalışan CD,
-Pardus Ulusal İşletim Sistemi'nin CD üzerinde çalışan sürümünü içeriyor.
+<span class="metin">Ankara Milli Kütüphane'de düzenlenen 
+<a href="http://senlik.linux.org.tr/">4. Linux ve Özgür Yazılım Şenliği</a>'nde 
+katılımcılara dağıtılan Pardus Çalışan CD 1.1,
+Pardus Ulusal İşletim Sistemi'nin CD üzerinde çalışan son sürümünü içeriyor.
 CD içerisinde ofis araçları (metin düzenleyici, hesap tablosu, sunum hazırlayıcı,
 vb.), İnternet araçları (tarayıcı, e-posta, sohbet, vb.), çokluortam
 ve grafik araçları (film oynatıcı, müzik çalar, vb.), oyunlar ve
 çok sayıda uygulama mevcut. </span>
 
 <p class="metin">
-İstanbul Bilgi Üniversitesinin düzenlediği <a href="http://open.bilgi.edu.tr/freedays/">Açık Kaynak Günleri 2005</a> etkinliğinde, katılımcılara Ulusal Dağıtım hakkında bilgi verildi
-ve <a href="urunler/pardus_calisan_cd_1.0.html">Pardus Çalışan CD 1.0</a> tam sürümü dağıtıldı.
+LKD'nin düzenlediği <a href="http://senlik.linux.org.tr/">4. Linux ve Özgür Yazılım Şenliği</a>'ne katılan Uludağ Projesi ekibi ve katkıcıları tarafından katılımcılara Ulusal Dağıtım hakkında bilgi verildi 
+ve Uludağ Projesi standında <a href="urunler/pardus_calisan_cd_1.1.html">Pardus Çalışan CD 1.1</a> tam sürümü dağıtıldı.
 </p>
 
 <p class="baslik"><span class="emph">Pardus,
