--- a/web/projeler/index.html
+++ b/web/projeler/index.html
@@ -92,7 +92,7 @@ Projenin çalışma sayfasına ulaşmak için <a href="comar/index.html">tıklay
 
 <p class="baslik"><img src="../images/bullet-krm.png"> PISI</p>
 <p>
-<em>PISI (Packages Installed Succesfully as Intented)</em>,
+<em>PISI (Packages Installed Successfully as Intended)</em>,
 Ulusal Dağıtımın paket yönetim sistemidir.
 Paketlerin sisteme sorunsuz bir şekilde eklenip çıkarılmasını
 sağlar. Paketlerin diğer paket/kitaplıklara ve COMAR görevlerine
