--- a/web/projeler/pisi/index.html
+++ b/web/projeler/pisi/index.html
@@ -51,7 +51,7 @@
 </p>
 
 <p class="icmetin">
-PİSİ (Packages Installed Succesfully as Intented), Uludağ Projesi bünyesinde geliştirilen yeni bir paket yönetim sistemidir.
+PİSİ (Packages Installed Successfully as Intended), Uludağ Projesi bünyesinde geliştirilen yeni bir paket yönetim sistemidir.
 </p>
 
 <br>
