yazım yanlışı düzeltildi. Mehmet ULUER bildirmişti (bug #321).

--- a/trunk/web/eng/projeler/index.html
+++ b/trunk/web/eng/projeler/index.html
@@ -84,7 +84,7 @@ With the ÇOMAR assistance, applications are able to set up themselves according
 
 <p class="baslik"><img src="../images/bullet-krm.png"> PISI</p>
 <p>
-<em>PISI (Packages Installed Succesfully as Intented)</em> is the package management system of Uludağ project.
+<em>PISI (Packages Installed Successfully as Intended)</em> is the package management system of Uludağ project.
 It provides installing/removing the packages to/from the system without any error.
 It stores package dependencies to other packages/libraries and COMAR tasks.
 It finds out package(s) to handle COMAR tasks, like opening a file type or serving web pages, 
