--- a/web/belgeler/index.html
+++ b/web/belgeler/index.html
@@ -44,9 +44,20 @@
 <br>
 
 <!-- SAYFA İÇERİK BAŞI -->
+
 <center><table class="belge" cellspacing=10>
   <tbody>
 
+<tr>
+<td width=400 align="left" class="metin"><b>Pardus Kurulum ve Kullanım
+Kılavuzu</b> (01/08/2005): Pardus Linux'un Kurulum ve Kullanım Kılavuzunun 
+yazılmasına başlandı. Proje hakkındaki tüm bilgilere 
+<a href=/belgeler/pardus_kilavuz>proje sayfasından</a> ulaşabilirsiniz.
+</td>
+<td class="menubar">&nbsp;</td>
+<td class="menubar">&nbsp;</td>
+<td class="menubar">&nbsp;</td>
+</tr>
 <tr>
 <td align="left" class="metin"><b>Proje Ana Sözleşmesi</b> (25/02/2005)</td>
 <td class="menubar"><a href="./sozlesme/index.html">HTML</a></td>
