--- a/web/belgeler/pardus-kilavuz/index.html
+++ b/web/belgeler/pardus-kilavuz/index.html
@@ -91,7 +91,7 @@ içerikte alıntı yapılan tüm kaynaklar ise kitap sonunda
 belirtilecektir.
 <p>
 Pardus Kullanım Kılavuzu'nun yazımı için açılan web sayfası
-<a href=http://www.uludag.org.tr/pardus_kilavuz>www.uludag.org.tr/pardus_kilavuz</a>
+<a href=http://www.uludag.org.tr/pardus-kilavuz>www.uludag.org.tr/pardus-kilavuz</a>
 adresindedir. Kılavuzun yazımı sırasında etkin görev almak (öneri getirilmesi, bölüm
 yazımı, yazılan bölümlerin incelenmesi ve denetiminin yapılması
 vb) aşağıdaki e-posta listesine üye olmasını rica ederiz.
