--- a/web/belgeler/pardus-kilavuz/index.html
+++ b/web/belgeler/pardus-kilavuz/index.html
@@ -54,6 +54,7 @@
 
 <p><span class="baslik"> Pardus Kullanım Kılavuzu </span></p>
 
+<img src=../../images/pardus_kitap.png align=right>
 Pardus Kullanım Kılavuzu, son kullanıcıya yönelik olarak
 tasarlanan ve geliştirilen Pardus Linux işletim sisteminin kurulum ve
 kullanımını anlatır. Yaklaşık 150 sayfa olarak tasarlanan kitabın
@@ -80,7 +81,7 @@ belirten alt başlıklar bulunacaktır.
 
 <p>
 Kitabın yazımına 10 Ağustos tarihinde başlanacak ve süreç tahminen
-(kullanıcılardan gelecek desteğin hız ve miktarına göre) 30 gün
+(Pardus uzmanlarından gelecek desteğin hız ve miktarına göre) 30 gün
 sürecek. Pardus'un kurulum programının yazımına henüz başlanmadığı
 için kurulum programına yönelik tüm başlıklar ilk etapta atlanacak.
 <p>
@@ -91,7 +92,7 @@ içerikte alıntı yapılan tüm kaynaklar ise kitap sonunda
 belirtilecektir.
 <p>
 Pardus Kullanım Kılavuzu'nun yazımı için açılan web sayfası
-<a href=http://www.uludag.org.tr/pardus-kilavuz>www.uludag.org.tr/pardus-kilavuz</a>
+<a href=http://www.uludag.org.tr/belgeler/pardus-kilavuz>www.uludag.org.tr/belgeler/pardus-kilavuz</a>
 adresindedir. Kılavuzun yazımı sırasında etkin görev almak (öneri getirilmesi, bölüm
 yazımı, yazılan bölümlerin incelenmesi ve denetiminin yapılması
 vb) aşağıdaki e-posta listesine üye olmasını rica ederiz.
@@ -102,7 +103,8 @@ vb) aşağıdaki e-posta listesine üye olmasını rica ederiz.
 <li><a href=http://mail.uludag.org.tr/mailman/listinfo/pardus-doc>
 Pardus belgeleme e-posta listesi</a>
 <li>Kitabın <a href=icindekiler.html>içindekiler bölümü</a>
-<li>Kitabı yazarken gözetilecek <a href=kurallar_listesi>kurallar listesi</a>
+<li>Kitabı yazarken gözetilecek <a href=yazim-kurallari.html>yazım kuralları listesi</a>
+<li>Yazım sırasında kullanılacak <a href=pardus-kilavuz-sablonu.stw>Pardus kılavuz şablonu</a> (OpenOffice.org 1.1.5 Writer biçiminde)
 </ol>
 
 </td>
