--- a/trunk/web/belgeler/index.html
+++ b/trunk/web/belgeler/index.html
@@ -52,7 +52,7 @@
 <td width=400 align="left" class="metin"><b>Pardus Kurulum ve Kullanım
 Kılavuzu</b> (01/08/2005): Pardus Linux'un Kurulum ve Kullanım Kılavuzunun 
 yazılmasına başlandı. Proje hakkındaki tüm bilgilere 
-<a href=/belgeler/pardus_kilavuz>proje sayfasından</a> ulaşabilirsiniz.
+<a href=pardus-kilavuz>proje sayfasından</a> ulaşabilirsiniz.
 </td>
 <td class="menubar">&nbsp;</td>
 <td class="menubar">&nbsp;</td>
