Proje web sayfası değişti.

--- a/trunk/web/eng/projeler/turkce/y10me/node_7.html
+++ b/trunk/web/eng/projeler/turkce/y10me/node_7.html
@@ -18,7 +18,7 @@ in this document.<BR>
 They work on OpenOffice.org's localization and promotion. They help
 developing of software to make it 100% Turkish compatible.
 <DL COMPACT=compact><DT>
-<B>Website:</B><DD><A HREF="http://tr.openoffice.org"><TT>http://tr.openoffice.org</TT></A>
+<B>Website:</B><DD><A HREF="http://www.openoffice.org.tr"><TT>http://www.openoffice.org.tr</TT></A>
 <DT><B>Status&nbsp;Page:</B><DD><A HREF="http://ootrans.iqchoice.com/"><TT>http://ootrans.iqchoice.com/</TT></A>
 <DT><B>E-mail&nbsp;List:</B><DD><A HREF="http://tr.openoffice.org/servlets/ProjectMailingListList"><TT>http://tr.openoffice.org/servlets/ProjectMailingListList</TT></A>
 </DL>
