İlk kurallar.. Dili biraz düzeltmek gerekiyor.

--- a/trunk/web/belgeler/pardus-kilavuz/index.html
+++ b/trunk/web/belgeler/pardus-kilavuz/index.html
@@ -100,11 +100,14 @@ vb) aşağıdaki e-posta listesine üye olmasını rica ederiz.
 <p><span class="baslik">Bağlantılar</span></p>
 
 <ol>
-<li><a href=http://mail.uludag.org.tr/mailman/listinfo/pardus-doc>
+<li><a href=http://liste.uludag.org.tr/mailman/listinfo/pardus-doc>
 Pardus belgeleme e-posta listesi</a>
 <li>Kitabın <a href=icindekiler.html>içindekiler bölümü</a>
 <li>Kitabı yazarken gözetilecek <a href=yazim-kurallari.html>yazım kuralları listesi</a>
-<li>Yazım sırasında kullanılacak <a href=pardus-kilavuz-sablonu.stw>Pardus kılavuz şablonu</a> (OpenOffice.org 1.1.5 Writer biçiminde)
+<li>Yazım sırasında kullanılacak <a
+href=pardus-kilavuz-sablonu.stw>Pardus kılavuz şablonu</a>
+(OpenOffice.org 1.1.5 Writer biçimindedir. Fareyle sağ tıklayıp
+masaüstüne kaydedildikten sonra OpenOffice.org Writer ile açabilirsiniz)
 </ol>
 
 </td>
