--- a/trunk/web/belgeler/pardus-kilavuz/yazim-kurallari.html
+++ b/trunk/web/belgeler/pardus-kilavuz/yazim-kurallari.html
@@ -54,9 +54,29 @@
 
 <p><span class="baslik"> Kılavuz Yazım Kuralları</span></p>
 
-blah..
+Aşağıdaki temel maddeler, Pardus Kurulum ve Kullanım Kılavuzu'nun
+yazımı sırasında editörler tarafından gözetilecek kuralların bir 
+listesini oluşturur. Bu kurallar, kitabın internette, herkese
+açık bir şekilde kontrollü hazırlanıp geliştirildiği  
+bir durumda, yazılı metnin içeriğinin her zaman doğru, tutarlı
+ve eksiksiz olmasını sağlar. 
+
+
 <p>
-blah..
+
+<ol>
+<li>Kitabın hazırlanması sırasında Türkçe imla kurallarına
+özen gösterilmesi gerekir.
+<li>Kitapta yer alacak tüm resimler, Ksnapshot ya da Gimp
+programı ile alınarak PNG biçiminde 72dpi olarak
+kaydedilecektir.
+<li>Her resim ve tablonun açıklayıcı bir alt başlığının olması
+gereklidir. Alt başlıklar için numaralandırma yapılmayacaktır.
+<li>Kitabın herhangi bir bölümünün yazma sorumluluğunu
+alan kişi, metni <a href=pardus-kilavuz-sablonu.stw>şablon</a>
+kullanarak hazırlayacaktır.
+</ol>
+
 
 </td>
 </tr>
